unpackaged/main/default/objects/Account/fields/A_week_Before_date__c.field-meta.xml
<CustomField>
    <fullName>A_week_Before_date__c</fullName>
    <formula>Bank_anniversaries__c -7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>A week Before date</label>
    <type>Date</type>
</CustomField>