unpackaged/main/default/objects/Account/fields/AA_Test_Field1__c.field-meta.xml
<CustomField>
    <fullName>AA_Test_Field1__c</fullName>
    <label>AA Test Field1</label>
    <length>55</length>
    <type>Text</type>
</CustomField>