unpackaged/main/default/objects/Account/fields/AA_Test_Field2__c.field-meta.xml
<CustomField>
    <fullName>AA_Test_Field2__c</fullName>
    <label>AA Test Field2</label>
    <length>44</length>
    <type>Text</type>
</CustomField>