unpackaged/main/default/objects/Account/fields/AA_Text_Field_del__c.field-meta.xml
<CustomField>
    <fullName>AA_Text_Field_del__c</fullName>
    <label>AA Text Field</label>
    <length>55</length>
    <type>Text</type>
</CustomField>