unpackaged/main/default/objects/Account/fields/Agency_Banking__c.field-meta.xml
<CustomField>
    <fullName>Agency_Banking__c</fullName>
    <label>   Agency Banking</label>
    <type>TextArea</type>
</CustomField>