unpackaged/main/default/objects/Account/fields/Background_Details__c.field-meta.xml
<CustomField>
    <fullName>Background_Details__c</fullName>
    <label>Background Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>