unpackaged/main/default/objects/Account/fields/Bank_anniversaries__c.field-meta.xml
<CustomField>
    <fullName>Bank_anniversaries__c</fullName>
    <label>Bank anniversaries</label>
    <type>Date</type>
</CustomField>