unpackaged/main/default/objects/Account/fields/Bank_anniversary_Day__c.field-meta.xml
<CustomField>
    <fullName>Bank_anniversary_Day__c</fullName>
    <formula>TEXT(DAY( A_week_Before_date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank Anniversary Day/WeekAgo</label>
    <type>Text</type>
</CustomField>