unpackaged/main/default/objects/Account/fields/Bank_Anniversary_Month__c.field-meta.xml
<CustomField>
    <fullName>Bank_Anniversary_Month__c</fullName>
    <formula>TEXT(MONTH( A_week_Before_date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank Anniversary Month/week</label>
    <type>Text</type>
</CustomField>