unpackaged/main/default/objects/Account/fields/BankAnniversaryDay__c.field-meta.xml
<CustomField>
    <fullName>BankAnniversaryDay__c</fullName>
    <formula>TEXT(DAY( Bank_anniversaries__c	))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank Anniversary Day</label>
    <type>Text</type>
</CustomField>