unpackaged/main/default/objects/Account/fields/BankAnniversaryMonth__c.field-meta.xml
<CustomField>
    <fullName>BankAnniversaryMonth__c</fullName>
    <formula>TEXT(MONTH( Bank_anniversaries__c ))</formula>
    <label>Bank Anniversary Month</label>
    <type>Text</type>
</CustomField>