unpackaged/main/default/objects/Account/fields/Billing_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Zip_Postal_Code__c</fullName>
    <label>Billing Zip/Postal Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>