unpackaged/main/default/objects/Account/fields/Birthday_Month__c.field-meta.xml
<CustomField>
    <fullName>Birthday_Month__c</fullName>
    <formula>TEXT(MONTH( DOB__c ))</formula>
    <label>Birthday Month</label>
    <type>Text</type>
</CustomField>