unpackaged/main/default/objects/Account/fields/BusinessSegment__c.field-meta.xml
<CustomField>
    <fullName>BusinessSegment__c</fullName>
    <label>Business Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mass</fullName>
            </value>
            <value>
                <fullName>Premier</fullName>
            </value>
            <value>
                <fullName>SME</fullName>
            </value>
            <value>
                <fullName>Local Business</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Prestige</fullName>
            </value>
            <value>
                <fullName>Personal Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>