unpackaged/main/default/objects/Account/fields/CI_CD_Field__c.field-meta.xml
<CustomField>
    <fullName>CI_CD_Field__c</fullName>
    <label>CI/CD Field</label>
    <length>55</length>
    <type>Text</type>
</CustomField>