unpackaged/main/default/objects/Account/fields/CIFNumber__c.field-meta.xml
<CustomField>
    <fullName>CIFNumber__c</fullName>
    <label>CIF Number</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>