unpackaged/main/default/objects/Account/fields/CompanyName__c.field-meta.xml
<CustomField>
    <fullName>CompanyName__c</fullName>
    <label>Company Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>