unpackaged/main/default/objects/Account/fields/Customer_Expectation__c.field-meta.xml
<CustomField>
    <fullName>Customer_Expectation__c</fullName>
    <label>Customer Expectation</label>
    <type>TextArea</type>
</CustomField>