unpackaged/main/default/objects/Account/fields/DateEstablished__c.field-meta.xml
<CustomField>
    <fullName>DateEstablished__c</fullName>
    <label>Date Established</label>
    <type>Date</type>
</CustomField>