unpackaged/main/default/objects/Account/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <label>Duration</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>