unpackaged/main/default/objects/Account/fields/EmailAddress__c.field-meta.xml
<CustomField>
    <fullName>EmailAddress__c</fullName>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>