unpackaged/main/default/objects/Account/fields/Family_Details__c.field-meta.xml
<CustomField>
    <fullName>Family_Details__c</fullName>
    <label>Family Details</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>