unpackaged/main/default/objects/Account/fields/FaxNumber__c.field-meta.xml
<CustomField>
    <fullName>FaxNumber__c</fullName>
    <label>Fax Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>