unpackaged/main/default/objects/Account/fields/Fullname__c.field-meta.xml
<CustomField>
    <fullName>Fullname__c</fullName>
    <formula>FirstName &amp; &quot; &quot; &amp;  LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fullname</label>
    <type>Text</type>
</CustomField>