unpackaged/main/default/objects/Account/fields/Income_Details__c.field-meta.xml
<CustomField>
    <fullName>Income_Details__c</fullName>
    <label>Income Details</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>