unpackaged/main/default/objects/Account/fields/Interests_Hobbies__c.field-meta.xml
<CustomField>
    <fullName>Interests_Hobbies__c</fullName>
    <label>Interests/Hobbies</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AAA</fullName>
            </value>
            <value>
                <fullName>BBB</fullName>
            </value>
            <value>
                <fullName>CCC</fullName>
            </value>
            <value>
                <fullName>DDD</fullName>
            </value>
            <value>
                <fullName>EEE</fullName>
            </value>
            <value>
                <fullName>AAB</fullName>
            </value>
            <value>
                <fullName>AAC</fullName>
            </value>
            <value>
                <fullName>AAD</fullName>
            </value>
            <value>
                <fullName>AAE</fullName>
            </value>
            <value>
                <fullName>ABA</fullName>
            </value>
            <value>
                <fullName>ACA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>