unpackaged/main/default/objects/Account/fields/IsCustomer__c.field-meta.xml
<CustomField>
    <fullName>IsCustomer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCustomer</label>
    <type>Checkbox</type>
</CustomField>