unpackaged/main/default/objects/Account/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <label>Job Title</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>