unpackaged/main/default/objects/Account/fields/MiddleName__c.field-meta.xml
<CustomField>
    <fullName>MiddleName__c</fullName>
    <label>Middle Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>