unpackaged/main/default/objects/Account/fields/MobileNumber__c.field-meta.xml
<CustomField>
    <fullName>MobileNumber__c</fullName>
    <label>Mobile Number</label>
    <type>Phone</type>
</CustomField>