unpackaged/main/default/objects/Account/fields/Next_Birthday__c.field-meta.xml
<CustomField>
    <fullName>Next_Birthday__c</fullName>
    <description>calculate user next birthday</description>
    <formula>IF(MONTH(  DOB__c ) &gt; MONTH(TODAY()),DATE(YEAR(TODAY()),MONTH(DOB__c ),DAY(DOB__c )),
IF(MONTH(DOB__c  ) &lt; MONTH(TODAY()),DATE(YEAR(TODAY())+1,MONTH(DOB__c ),DAY(DOB__c )),
IF(DAY(DOB__c ) &gt;= (DAY(TODAY())),DATE(YEAR(TODAY()),MONTH(DOB__c ),DAY(DOB__c )),
DATE(YEAR(TODAY())+1,MONTH(DOB__c ),DAY(DOB__c )))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Birthday</label>
    <type>Date</type>
</CustomField>