unpackaged/main/default/objects/Account/fields/PassportNumber__c.field-meta.xml
<CustomField>
    <fullName>PassportNumber__c</fullName>
    <label>Passport Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>