unpackaged/main/default/objects/Account/fields/Post__c.field-meta.xml
<CustomField>
    <fullName>Post__c</fullName>
    <label>Post</label>
    <length>18</length>
    <type>Text</type>
</CustomField>