unpackaged/main/default/objects/Account/fields/Previous_Employer__c.field-meta.xml
<CustomField>
    <fullName>Previous_Employer__c</fullName>
    <label>Previous Employers</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>