unpackaged/main/default/objects/Account/fields/Priveleaged_Customer__c.field-meta.xml
<CustomField>
    <fullName>Priveleaged_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Priveleaged Customer</label>
    <type>Checkbox</type>
</CustomField>