unpackaged/main/default/objects/Account/fields/Product_Holding__c.field-meta.xml
<CustomField>
    <fullName>Product_Holding__c</fullName>
    <label>Product Holding</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>