unpackaged/main/default/objects/Account/fields/RegistrationNumber__c.field-meta.xml
<CustomField>
    <fullName>RegistrationNumber__c</fullName>
    <label>Registration Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>