unpackaged/main/default/objects/Account/fields/RelationShip_Manager__c.field-meta.xml
<CustomField>
    <fullName>RelationShip_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RelationShip Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>