unpackaged/main/default/objects/Account/fields/RelationshipBankerName__c.field-meta.xml
<CustomField>
    <fullName>RelationshipBankerName__c</fullName>
    <label>Relationship Banker Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>