unpackaged/main/default/objects/Account/fields/RM_Name__c.field-meta.xml
<CustomField>
    <fullName>RM_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RM Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>