unpackaged/main/default/objects/Account/fields/RMEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>RMEmailAddress__c</fullName>
    <label>RM Email Address</label>
    <type>Email</type>
</CustomField>