unpackaged/main/default/objects/Account/fields/RMMobileNumber__c.field-meta.xml
<CustomField>
    <fullName>RMMobileNumber__c</fullName>
    <label>RM Mobile Number</label>
    <type>Phone</type>
</CustomField>