unpackaged/main/default/objects/Account/fields/RMTelephoneNumberWork__c.field-meta.xml
<CustomField>
    <fullName>RMTelephoneNumberWork__c</fullName>
    <label>RM Telephone Number (Work)</label>
    <type>Phone</type>
</CustomField>