unpackaged/main/default/objects/Account/fields/Shipping_Street__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Street__c</fullName>
    <label>Shipping Street</label>
    <length>80</length>
    <type>Text</type>
</CustomField>