unpackaged/main/default/objects/Account/fields/Shipping_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Zip_Code__c</fullName>
    <label>Shipping Zip Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>