unpackaged/main/default/objects/Account/fields/Sms__c.field-meta.xml
<CustomField>
    <fullName>Sms__c</fullName>
    <label>Sms</label>
    <length>18</length>
    <type>Text</type>
</CustomField>