unpackaged/main/default/objects/Account/fields/Staff__c.field-meta.xml
<CustomField>
    <fullName>Staff__c</fullName>
    <label>Staff</label>
    <length>10</length>
    <type>Text</type>
</CustomField>