unpackaged/main/default/objects/Account/fields/Statements__c.field-meta.xml
<CustomField>
    <fullName>Statements__c</fullName>
    <label>Statements</label>
    <type>TextArea</type>
</CustomField>