unpackaged/main/default/objects/Account/fields/TelephoneNumberHome__c.field-meta.xml
<CustomField>
    <fullName>TelephoneNumberHome__c</fullName>
    <label>Telephone Number Home</label>
    <type>Phone</type>
</CustomField>