unpackaged/main/default/objects/Account/fields/TelephoneNumberWork__c.field-meta.xml
<CustomField>
    <fullName>TelephoneNumberWork__c</fullName>
    <label>Telephone Number Work</label>
    <type>Phone</type>
</CustomField>