unpackaged/main/default/objects/Account/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mr</fullName>
            </value>
            <value>
                <fullName>Mrs</fullName>
            </value>
            <value>
                <fullName>Miss</fullName>
            </value>
            <value>
                <fullName>Ms</fullName>
            </value>
            <value>
                <fullName>Doctor</fullName>
            </value>
            <value>
                <fullName>Admiral</fullName>
            </value>
            <value>
                <fullName>Advocate</fullName>
            </value>
            <value>
                <fullName>Brigadier</fullName>
            </value>
            <value>
                <fullName>Brigadier-General</fullName>
            </value>
            <value>
                <fullName>Captain</fullName>
            </value>
            <value>
                <fullName>Chief</fullName>
            </value>
            <value>
                <fullName>Colonel</fullName>
            </value>
            <value>
                <fullName>Commissioner</fullName>
            </value>
            <value>
                <fullName>Constable</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Estate Late</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Inspector</fullName>
            </value>
            <value>
                <fullName>Judge</fullName>
            </value>
            <value>
                <fullName>Lady</fullName>
            </value>
            <value>
                <fullName>Lieutenant</fullName>
            </value>
            <value>
                <fullName>Lieutenant Colonel</fullName>
            </value>
            <value>
                <fullName>Lieutenant General</fullName>
            </value>
            <value>
                <fullName>Lord</fullName>
            </value>
            <value>
                <fullName>Major</fullName>
            </value>
            <value>
                <fullName>Major General</fullName>
            </value>
            <value>
                <fullName>Minister</fullName>
            </value>
            <value>
                <fullName>Paramount Chief</fullName>
            </value>
            <value>
                <fullName>Pastor</fullName>
            </value>
            <value>
                <fullName>President</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>