unpackaged/main/default/objects/Account/fields/Value_of_SMS__c.field-meta.xml
<CustomField>
    <fullName>Value_of_SMS__c</fullName>
    <label>  Value of SMS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>