unpackaged/main/default/objects/Account/fields/Work_number__c.field-meta.xml
<CustomField>
    <fullName>Work_number__c</fullName>
    <label>Work number</label>
    <type>Phone</type>
</CustomField>