unpackaged/main/default/objects/Account/recordTypes/Business_Account_Prospect.recordType-meta.xml
<RecordType>
    <fullName>Business_Account_Prospect</fullName>
    <active>true</active>
    <label>Business Account Prospect</label>
</RecordType>