unpackaged/main/default/objects/Account/recordTypes/Person_Account_Prospect_Custom.recordType-meta.xml
<RecordType>
    <fullName>Person_Account_Prospect_Custom</fullName>
    <active>true</active>
    <label>Person Account Prospect Custom</label>
</RecordType>