unpackaged/main/default/objects/Account/validationRules/VR01_Email_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>VR01_Email_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(  PreferredContactMethod__c  , &#39;Email&#39;),
 ISBLANK(   EmailAddress__c ),  NOT(  $Setup.ValidationConfigurations__c.Bypass_Email_Validation__c ) )</errorConditionFormula>
    <errorDisplayField>EmailAddress__c</errorDisplayField>
    <errorMessage>Email Address Field shouldn&#39;t be blank.</errorMessage>
</ValidationRule>