unpackaged/main/default/objects/Account/validationRules/VR02_Fax_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>VR02_Fax_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( PreferredContactMethod__c , &#39;Fax&#39;),
 ISBLANK( FaxNumber__c ),  NOT( $Setup.ValidationConfigurations__c.Bypass_Fax_Validation__c ) )</errorConditionFormula>
    <errorDisplayField>FaxNumber__c</errorDisplayField>
    <errorMessage>Fax Number field can&#39;t be blank.</errorMessage>
</ValidationRule>