unpackaged/main/default/objects/Account/validationRules/VR03_Phone_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>VR03_Phone_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( PreferredContactMethod__c ,&#39;Call&#39;), ISBLANK(   Phonenumber__c   ), NOT( $Setup.ValidationConfigurations__c.Bypass_Phone_Validation__c ) 
 )</errorConditionFormula>
    <errorDisplayField>Phonenumber__c</errorDisplayField>
    <errorMessage>Phone Number field shouldn&#39;t be blank.</errorMessage>
</ValidationRule>