unpackaged/main/default/objects/Account/validationRules/VR04_Post_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>VR04_Post_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( PreferredContactMethod__c ,&#39;Post&#39;),
 ISBLANK( Post__c ), NOT( $Setup.ValidationConfigurations__c.Bypass_Post_Validation__c ) 
)</errorConditionFormula>
    <errorDisplayField>Post__c</errorDisplayField>
    <errorMessage>Post Field shouldn&#39;t be blank.</errorMessage>
</ValidationRule>